# CSA-OIDC

./: OIDC.docx  OIDC.txt  README.md  docker-compose.yml  ~$OIDC.docx
IAM/: package-lock.json  package.json
IAM-API/: Cargo.toml
IAM-API/src/: main.rs
IAM/src/: callback.js  home.js  index.js  login.js  settings.js
backend/: Cargo.toml  Dockerfile
backend/example/: policy.rego
backend/src/: extractor.rs  main.rs  opa.rs
backend/src/db/: mod.rs
frontend/: Dockerfile  config.conf  package-lock.json  package.json
frontend/src/: App.js  callback.js  home.js  index.js  login.js  settings.js
