[package]
name = "iam-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jwks-client = "0.2.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.20", features = ["headers", "macros"]}
dashmap = "5.5.3"
reqwest = "0.11.22"
serde_json = "1.0"
serde = "1.0.192"
tower-http = { version = "0.4.0", features = ["full"] }

